# moria-watcher

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: constants.rs  main.rs  routes.rs  vars.rs
api/src/routes/: home.rs
cli/: Cargo.toml
common/: Cargo.toml
common/src/: vars.rs
container/: Containerfile  motd
db/: Cargo.toml
db/src/: db.rs  main.rs
entity/: Cargo.toml
entity/src/: guest.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
service/: Cargo.toml
service/src/: guest_service.rs  lib.rs
service/tests/: mock.rs  prepare.rs
