[workspace]
members = ["db", "cli", "entity", "migration", "api"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.7.0"
assert_cmd = "2.0.13"
async-std = "1"
clap = "4.5.1"
dotenv = "0.15"
env_logger = "0.11"
lazy_static = "1.5"
log = "0.4.19"
sea-orm = "0.12"
sea-orm-migration = "0.12.0"
serde_json = "1"
tokio = "1"