[workspace]
members = ["db", "cli", "entity", "migration", "api", "common", "service"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.8.0"
assert_cmd = "2.0.13"
async-std = "1"
clap = "4.5.1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4.19"
sea-orm = "0.12"
sea-orm-migration = "0.12.0"
serde = "1"
serde_json = "1"
temp-env = "0.3"
tokio = "1"
uuid = "1.7.0"

common = { path = "common" }
db = { path = "db" }
entity = { path = "entity" }