[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
common = { workspace = true }
db = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde_json = { workspace = true }