[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-uuid",
] }
tokio = { workspace = true, features = ["full"] }
